--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -1,11 +1,17 @@
 # Your Medusa backend, should be updated to where you are hosting your server. Remember to update CORS settings for your server. See – https://docs.medusajs.com/learn/configurations/medusa-config#httpstorecors
 MEDUSA_BACKEND_URL=http://localhost:9000
 
+# Production: Update this to your Railway backend URL when deployed
+NEXT_PUBLIC_MEDUSA_BACKEND_URL=https://your-backend-url.railway.app
+
 # Your publishable key that can be attached to sales channels. See - https://docs.medusajs.com/resources/storefront-development/publishable-api-keys
 NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=pk_test
 
 # Your store URL, should be updated to where you are hosting your storefront.
 NEXT_PUBLIC_BASE_URL=http://localhost:8000
+
+# Production: Update this to your Vercel frontend URL when deployed
+NEXT_PUBLIC_STORE_URL=https://your-app.vercel.app
 
 # Your preferred default region. When middleware cannot determine the user region from the "x-vercel-country" header, the default region will be used. ISO-2 lowercase format. 
 NEXT_PUBLIC_DEFAULT_REGION=us
