--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
-    "start": "medusa start --host 0.0.0.0 --port $PORT",
+    "start": "medusa start",
     "dev": "medusa develop",
     "migrate": "medusa migrations run",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
