Fix Railway start command detection

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -16,3 +16,4 @@ cmds=["npm run build"]
 healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
+startCommand = "npm run start"
