--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -5,7 +5,7 @@ builder = "NIXPACKS"
 nixPkgs = ["nodejs"]
 
 [build.nixpacksPlan.phases.install]
-cmds=["cd backend && npm install --legacy-peer-deps"]
+cmds=["cd backend && NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps"]
 
 [build.nixpacksPlan.phases.build]
 cmds=["cd backend && npm run build"]
