Enable admin UI and point frontend envs to production

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,13 +1,13 @@
 # Production Environment Variables for Railway Backend
 
 # Your Medusa backend deployed on Railway
-NEXT_PUBLIC_MEDUSA_BACKEND_URL=https://your-backend-url.railway.app
+NEXT_PUBLIC_MEDUSA_BACKEND_URL=https://toycker-production.up.railway.app
 
 # Your publishable API key from Medusa admin
-NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=pk_your_publishable_key_here
+NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=pk_live_your_publishable_key
 
 # Your store URL deployed on Vercel
-NEXT_PUBLIC_BASE_URL=https://your-app.vercel.app
+NEXT_PUBLIC_BASE_URL=https://toycker.vercel.app
 
 # Default region
 NEXT_PUBLIC_DEFAULT_REGION=us
