--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,8 +1,11 @@
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
-ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-REDIS_URL=redis://localhost:6379
-JWT_SECRET=supersecret
-COOKIE_SECRET=supersecret
-DATABASE_URL=
-DB_NAME=medusa-v2
+STORE_CORS=http://localhost:8000
+ADMIN_CORS=http://localhost:5173,http://localhost:9000
+AUTH_CORS=http://localhost:5173,http://localhost:9000
+REDIS_URL=rediss://<redis-user>:<redis-password>@<redis-host>:6379
+JWT_SECRET=change-me
+COOKIE_SECRET=change-me-too
+DATABASE_URL=postgresql://YOUR_DB_USER:YOUR_DB_PASSWORD@YOUR_NEON_ENDPOINT/dbname?sslmode=require&connect_timeout=10
+DATABASE_SSL=false
+DB_SSL_REJECT_UNAUTHORIZED=false
+DB_NAME=toycker
+MEDUSA_WORKER_MODE=shared
