chore: add GCP VM deployment guide

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,10 +1,10 @@
 STORE_CORS=http://localhost:8000
 ADMIN_CORS=http://localhost:5173,http://localhost:9000
 AUTH_CORS=http://localhost:5173,http://localhost:9000
-REDIS_URL=rediss://<redis-user>:<redis-password>@<redis-host>:6379
+REDIS_URL=YOUR_REDIS_TLS_URL
 JWT_SECRET=change-me
 COOKIE_SECRET=change-me-too
-DATABASE_URL=postgresql://YOUR_DB_USER:YOUR_DB_PASSWORD@YOUR_NEON_ENDPOINT/dbname?sslmode=require&connect_timeout=10
+DATABASE_URL=YOUR_NEON_POOLED_URL
 DATABASE_SSL=false
 DB_SSL_REJECT_UNAUTHORIZED=false
 DB_NAME=toycker
