chore: update dependencies and package versions
- Upgraded Vite to version 6.0.0 in both backend and frontend package files.
- Updated various AWS SDK packages to version 3.934.0 in backend package-lock.json.
- Adjusted esbuild version to 0.25.9 in backend package.json.
- Removed peer flags from several dependencies in frontend package-lock.json.
- Updated color and glob packages to their latest versions in both package-lock files.

--- a/backend/package.json
+++ b/backend/package.json
@@ -48,10 +48,13 @@
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "vite": "^5.2.11",
+    "vite": "^6.0.0",
     "yalc": "^1.0.0-pre.53"
   },
   "engines": {
     "node": ">=20"
+  },
+  "overrides": {
+    "esbuild": "0.25.9"
   }
 }
