feat: integrate cloudflare r2 storage

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -6,3 +6,11 @@ JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=
 DB_NAME=medusa-v2
+CLOUDFLARE_R2_ACCOUNT_ID=
+CLOUDFLARE_R2_BUCKET=
+CLOUDFLARE_R2_PUBLIC_URL=
+CLOUDFLARE_R2_ACCESS_KEY_ID=
+CLOUDFLARE_R2_SECRET_KEY=
+CLOUDFLARE_R2_ENDPOINT=
+CLOUDFLARE_R2_REGION=auto
+CLOUDFLARE_R2_PREFIX=uploads/
