--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -31,3 +31,6 @@ REVALIDATE_SECRET=supersecret
 # For Cloud users: add your Medusa Cloud S3 hostname and pathname to enable image optimization.
 MEDUSA_CLOUD_S3_HOSTNAME=
 MEDUSA_CLOUD_S3_PATHNAME=
+NEXT_PUBLIC_R2_MEDIA_PROTOCOL=https
+NEXT_PUBLIC_R2_MEDIA_HOSTNAME=
+NEXT_PUBLIC_R2_MEDIA_PATHNAME=
