feat: enable medusa cache revalidation

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,6 +2,11 @@ STORE_CORS=http://localhost:8000,https://docs.medusajs.com
 ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 REDIS_URL=redis://localhost:6379
+CACHE_REDIS_URL=redis://localhost:6379
+CACHE_REDIS_TTL=3600
+CACHE_REDIS_PREFIX=toycker
+STOREFRONT_REVALIDATE_URL=http://localhost:8000/api/cache/revalidate
+STOREFRONT_REVALIDATE_SECRET=
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=
