--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,14 @@
     "start:pm2": "pm2 start ./pm2.config.cjs --env production",
     "dev": "medusa develop",
     "migrate": "medusa migrations run",
+    "transform:shopify": "ts-node ./src/scripts/transform-shopify-to-medusa.ts",
+    "products:delete": "medusa exec ./src/scripts/delete-all-products.ts",
     "test:integration:http": "cross-env TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit --passWithNoTests",
     "test:integration:modules": "cross-env TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit --passWithNoTests",
     "test:unit": "cross-env TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit --passWithNoTests"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.940.0",
     "@medusajs/admin-sdk": "2.11.3",
     "@medusajs/admin-shared": "2.11.3",
     "@medusajs/cli": "2.11.3",
@@ -34,11 +37,13 @@
     "@medusajs/medusa": "2.11.3",
     "@medusajs/ui": "4.0.27",
     "@medusajs/workflows-sdk": "^2.11.3",
+    "csv-parse": "^5.5.6",
+    "csv-stringify": "^6.5.0",
     "postgres": "^3.4.7"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.11.3",
-    "@swc/core": "1.5.7",
+    "@swc/core": "^1.15.3",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.0.0",
