--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "server-only": "^0.0.1",
     "swiper": "^12.0.3",
     "tailwindcss-radix": "^2.8.0",
+    "web-vitals": "^5.1.0",
     "webpack": "^5"
   },
   "devDependencies": {
