--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "isomorphic-dompurify": "^2.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.553.0",
-    "next": "^15.3.1",
+    "next": "^15.5.7",
     "pg": "^8.11.3",
     "qs": "^6.12.1",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -51,7 +51,7 @@
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "eslint": "8.10.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^15.5.7",
     "postcss": "^8.4.8",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.0.23",
