--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -35,3 +35,8 @@ MEDUSA_CLOUD_S3_PATHNAME=
 NEXT_PUBLIC_R2_MEDIA_PROTOCOL=https
 NEXT_PUBLIC_R2_MEDIA_HOSTNAME=
 NEXT_PUBLIC_R2_MEDIA_PATHNAME=
+
+# Performance tuning flags
+NEXT_PUBLIC_MULTI_COLLECTIONS_ENABLED=false
+NEXT_PUBLIC_MULTI_COLLECTIONS_REVALIDATE=0
+NEXT_PUBLIC_EXCLUSIVE_COLLECTIONS_REVALIDATE=300
