--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
   },
   "overrides": {
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "jsdom": "25.0.1"
   }
 }
