--- a/backend/package.json
+++ b/backend/package.json
@@ -26,16 +26,27 @@
     "test:unit": "cross-env TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit --passWithNoTests"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@medusajs/admin-sdk": "2.11.3",
     "@medusajs/admin-shared": "2.11.3",
+    "@medusajs/caching-redis": "2.11.3",
     "@medusajs/cli": "2.11.3",
+    "@medusajs/core-flows": "2.11.3",
     "@medusajs/dashboard": "2.11.3",
     "@medusajs/draft-order": "2.11.3",
+    "@medusajs/file-s3": "2.11.3",
     "@medusajs/framework": "2.11.3",
+    "@medusajs/icons": "^2.12.3",
+    "@medusajs/js-sdk": "^2.12.3",
     "@medusajs/medusa": "2.11.3",
+    "@medusajs/types": "2.11.3",
     "@medusajs/ui": "4.0.27",
-    "@medusajs/workflows-sdk": "^2.11.3",
-    "postgres": "^3.4.7"
+    "@medusajs/utils": "2.11.3",
+    "@medusajs/workflows-sdk": "2.11.3",
+    "@tanstack/react-query": "^5.90.12",
+    "postgres": "^3.4.7",
+    "react-hook-form": "^7.69.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.11.3",
