--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "medusa build",
-    "build:prod": "npm run build && node ./scripts/prepare-prod-build.mjs",
+    "build:prod": "pnpm run build && node ./scripts/prepare-prod-build.mjs",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
     "start:pm2": "pm2 start ./pm2.config.cjs --env production",
